[gd_scene load_steps=10 format=3 uid="uid://30mde2a3la3"]

[ext_resource type="Script" path="res://Scenes/Main/test_menu.gd" id="1_gbjgu"]
[ext_resource type="FontFile" uid="uid://bk4os2yyrjyde" path="res://Fonts/Bebas Neue Pro Expanded Regular.otf" id="2_e6cb3"]

[sub_resource type="Theme" id="Theme_l03eg"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_4uuyn"]
default_font = ExtResource("2_e6cb3")
default_font_size = 100

[sub_resource type="Theme" id="Theme_c7740"]
default_font = ExtResource("2_e6cb3")
default_font_size = 100

[sub_resource type="Theme" id="Theme_vx7wg"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_1lvh5"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_0rf62"]
default_font_size = 40

[sub_resource type="Theme" id="Theme_1tkgk"]
default_font_size = 40

[node name="TestMenu" type="Node"]
script = ExtResource("1_gbjgu")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="MainMenu" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -20.0
offset_right = 92.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_l03eg")

[node name="LocalButton" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme = SubResource("Theme_4uuyn")
text = "Play Local"

[node name="OnlineButton" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme = SubResource("Theme_c7740")
text = "Play Online"

[node name="ConnectionPanel" type="Window" parent="CanvasLayer"]
title = "Online"
initial_position = 1
size = Vector2i(440, 245)
visible = false

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ConnectionPanel"]
offset_top = 36.0
offset_bottom = 36.0
columns = 2

[node name="HostLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_vx7wg")
text = "Host: "

[node name="HostField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_vx7wg")
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_vx7wg")
text = "Port:"

[node name="PortField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_vx7wg")
text = "9999"

[node name="ServerButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_vx7wg")
text = "Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/ConnectionPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_vx7wg")
text = "Client
"

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme = SubResource("Theme_1lvh5")
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -63.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_0rf62")
text = "Reset"

[node name="SyncLostLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 23.0
grow_horizontal = 0
theme = SubResource("Theme_1tkgk")
text = "Regaining sync..."

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="CanvasLayer/MainMenu/LocalButton" to="." method="_on_local_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/OnlineButton" to="." method="_on_online_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/GridContainer/ClientButton" to="." method="_on_client_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_reset_button_pressed"]
